# tv-client

./: .gitattributes  .gitignore  CLAUDE.md  COMPONENTS.md  DESIGN_SYSTEM.md  MECHANISMS.md  MODULES.md  README.md  generate-icons.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-test.yml  release.yml
docs/: architecture.html  install-guide.html
docs/dev/: MODULES.md
migrations/: 001_product_tables.sql  003_scheduler_run_steps.sql  004_api_task_logs.sql  006_domain_metadata.sql
scripts/: README.md  build-sidecar.sh  bulk-generate-writeups.mjs  generate-commands.js  import-keys.sh  install-tv-mcp.ps1  install-tv-mcp.sh  release-mac.sh  release-win.ps1  setup-claude-mcp.ps1  setup-claude-mcp.sh  sync-emails-to-supabase.mjs  sync-skills.mjs
scripts/public-data/: embed-mcf-jobs.py  ingest-acra.mjs  ingest-cea.mjs  ingest-gov-jobs.py  ingest-mcf-jobs.py
scripts/screenshots/: README.md  capture.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: github-sync-default.json
src-tauri/scripts/: notion-to-md.mjs
src-tauri/sidecars/agent-runner/: README.md  package.json  tsconfig.json
src-tauri/sidecars/agent-runner/src/: index.ts
src-tauri/src/: lib.rs  main.rs  migration.rs
src-tauri/src/commands/: agent_runner.rs  auth.rs  claude_setup.rs  discussions.rs  files.rs  folder_chat.rs  gallery.rs  help_chat.rs  mcp.rs  mcp_tools.rs  mod.rs  notifications.rs  s3_browser.rs  search.rs  settings.rs  skill_registry.rs  supabase.rs  terminal.rs  whatsapp.rs
src-tauri/src/commands/analytics/: auth.rs  background.rs  ga4.rs  mod.rs  types.rs
src-tauri/src/commands/apollo/: api.rs  commands.rs  types.rs
src-tauri/src/commands/blog/: articles.rs  mod.rs
src-tauri/src/commands/crm/: activities.rs  companies.rs  contacts.rs  deals.rs  mod.rs  types.rs
src-tauri/src/commands/email/: campaigns.rs  mod.rs  send.rs
src-tauri/src/commands/feed/: cards.rs  mod.rs
src-tauri/src/commands/fmp/: client.rs  endpoints.rs  mod.rs  projections.rs  sync.rs
src-tauri/src/commands/github_sync/: api.rs  config.rs  mapping.rs  mod.rs  sync.rs
src-tauri/src/commands/ibkr/: flex.rs  mod.rs  sync.rs
src-tauri/src/commands/linkedin/: api.rs  auth.rs  mod.rs  types.rs
src-tauri/src/commands/notion/: api.rs  background.rs  commands.rs  export.rs  mapping.rs  mod.rs  sync.rs  types.rs
src-tauri/src/commands/outlook/: auth.rs  background.rs  classify.rs  commands.rs  contacts.rs  db.rs  graph.rs  mod.rs  sync.rs  types.rs
src-tauri/src/commands/public_data/: background.rs  classify.rs  mod.rs
src-tauri/src/commands/repos/: commands.rs  types.rs
src-tauri/src/commands/scheduler/: action.rs  background.rs  commands.rs  mod.rs  runner.rs  storage.rs  types.rs
src-tauri/src/commands/tools/: docgen.rs  gamma.rs  intercom.rs  mod.rs  nanobanana.rs  seedance.rs
src-tauri/src/commands/val_sync/: ai_package.rs  api.rs  audit.rs  auth.rs  claude_runner.rs  config.rs  dashboard_health.rs  dependencies.rs  domain_model.rs  drive.rs  errors.rs  extract.rs  health.rs  metadata.rs  mod.rs  monitoring.rs  overview.rs  query_health.rs  recency.rs  s3_sync.rs  sql.rs  sql_gen.rs  sync.rs  table_pipeline.rs
src-tauri/src/commands/work/: initiatives.rs  labels.rs  milestones.rs  mod.rs  projects.rs  sessions.rs  skills.rs  tasks.rs  types.rs  users.rs
src-tauri/src/commands/workspace/: artifacts.rs  context.rs  mod.rs  sessions.rs  types.rs  workspaces.rs
src-tauri/src/mcp/: CLAUDE.md  mod.rs  protocol.rs  server.rs
src-tauri/src/mcp/tools/: apollo.rs  blog.rs  crm.rs  discussions.rs  docgen.rs  email.rs  feed.rs  generate.rs  intercom.rs  mod.rs  notifications.rs  val_sync.rs  whatsapp.rs  work.rs  workspace.rs
src-tauri/src/models/: mod.rs
src/components/: BackButton.tsx  DriftDiffModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  FloatingTerminal.tsx  JobsModal.tsx  Login.tsx  PageHeader.tsx  RecentChangesPanel.tsx  ResizablePanel.tsx  SectionToolbar.tsx  SetupWizard.tsx  SkillAssignmentGrid.tsx  StatsStrip.tsx  TableDriftDiffModal.tsx  TipTapResizableImage.tsx  UserProfile.tsx  ViewTab.tsx  WorkspacePicker.tsx
src/config/: modes.ts
src/hooks/: useAiSkills.ts  useAppUpdate.ts  useBotSkills.ts  useCRM.ts  useCalendar.ts  useClassificationValues.ts  useClientEngagement.ts  useCollapsiblePanel.ts  useFiles.ts  (+36 more)
supabase-mgmt/: .gitignore  README.md
(+874 files in other folders)
