[package]
name = "tv-client"
version = "0.6.5"
edition = "2021"
default-run = "tv-client"

[[bin]]
name = "tv-mcp"
path = "src/bin/tv-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# File operations
walkdir = "2"
ignore = "0.4"
notify = "6"

# Terminal
portable-pty = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Home directory
dirs = "5"

# Encoding
base64 = "0.22"

# HTTP client (for GitHub OAuth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# OAuth helpers
urlencoding = "2"
open = "5"

# Async runtime (for OAuth timeout and MCP server)
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "io-std", "net", "process"] }

# HTTP server (for MCP testing)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Regex (for parsing frontmatter)
regex = "1"

# Markdown to HTML conversion (for Intercom and PDF generation)
pulldown-cmark = "0.10"

# SQLite (for Outlook email metadata)
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing (for email body file names)
sha2 = "0.10"

# JWT signing (for GA4 service account auth)
jsonwebtoken = "9"

[profile.dev]
debug = 0  # No debug symbols - faster builds, smaller target/debug folder
