[package]
name = "tv-client"
version = "0.10.39"
edition = "2021"
default-run = "tv-client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
css-inline = "0.20"
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# File operations
walkdir = "2"
similar = "2"
ignore = "0.4"
notify = "6"

# Terminal
portable-pty = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Home directory
dirs = "5"

# Encoding
base64 = "0.22"

# HTTP client (for GitHub OAuth)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }

# Error handling
thiserror = "2"

# OAuth helpers
urlencoding = "2"
open = "5"

# Async runtime (for OAuth timeout)
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "io-std", "net", "process"] }

# Cron expression parsing (for scheduler)
cron = "0.12"

# Lazy statics (for global process map)
once_cell = "1"

# POSIX signals (for stopping scheduler jobs)
libc = "0.2"

# Regex (for parsing frontmatter)
regex = "1"

# Markdown to HTML conversion (for Intercom and PDF generation)
pulldown-cmark = "0.10"

# XML parsing (for IBKR Flex Web Service responses)
quick-xml = "0.31"

# SQLite (for Outlook email metadata)
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing (for email body file names)
sha2 = "0.10"

# Async stream combinators (for bounded concurrency)
futures = "0.3"

# JWT signing (for GA4 service account auth)
jsonwebtoken = "9"

# AWS SDKs (no external CLI dependency)
aws-sdk-s3 = "1"
aws-sdk-ses = "1"
aws-types = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[profile.dev]
debug = 0  # No debug symbols - faster builds, smaller target/debug folder

[profile.release]
lto = "thin"        # Faster than fat LTO, still optimizes well
codegen-units = 16  # Parallel codegen for faster release builds

# CI profile — used by GitHub Actions release builds.
# Skips LTO for ~3-5min faster Windows builds; binary is ~10-20% larger.
# User-perceived runtime performance is nearly identical for this UI app.
[profile.release-ci]
inherits = "release"
lto = false
codegen-units = 256
strip = true
